--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,31 @@ input::placeholder {
   border: 3px solid red;
   margin: 15px auto;
 }
+
+.future {
+  margin: 20px auto;
+  border-radius: 1rem;
+  border: 1px solid #3D76D0;
+  background: hsl(217, 19%, 24%);
+  display: grid;
+  grid-template-rows: repeat(auto-fill, auto);
+  padding: 15px 5px;
+  gap: 10px;
+  height: 200px;
+  overflow: scroll;
+  max-width: 550px;
+}
+
+.future div {
+  width: 100%;
+  border-radius: 2rem;
+  background: hsl(218, 23%, 16%);
+  padding: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.future div img {
+  width: 25px;
+}
