--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,12 @@ input::placeholder {
   position: relative;
 }
 
-.temp::after {
+/* .temp::after {
   content: "°";
   font-size: 40px;
   position: absolute;
   top: 15px;
-}
+} */
 
 .t {
   position: relative;
@@ -77,6 +77,7 @@ input::placeholder {
   width: 80px;
   z-index: 9999;
   transform: translateX(80%);
+  display: none;
 }
 
 .data {
@@ -114,7 +115,7 @@ input::placeholder {
 
 .info div p:first-child {
   padding: 10px 0;
-  border-bottom: 5px solid #3D76D0;
+  border-bottom: 8px solid #3D76D0;
   height: 45px;
   font-size: 14px;
 }
@@ -136,62 +137,73 @@ input::placeholder {
   border: 15px solid #3D76D0;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(.8);
+  transform: translate(-50%, -50%);
 
 }
 
 .load {
-  border-bottom-color: transparent;
+  background: #3D76D0;
+  border: 2px solid #fff;
   height: 100px;
   width: 100px;
   border-radius: 50%;
   display: none;
-  animation: spin 1.5s infinite;
+  transform: translate(-50%, -50%) scale(.03);
+  animation: spin .5s infinite alternate;
 }
-
+.load p{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
 @keyframes spin {
   100% {
-    transform: translate(-50%, -50%) scale(1) rotate(360deg)
+    transform: translate(-50%, -50%) scale(1.3)
   }
 }
 
 .err {
-  width: 350px;
-  padding: 20px 5px;
+  width: 250px;
+  padding: 20px 5px 10px;
   display: none;
 }
 
 .err button {
   width: 150px;
+  margin: 25px auto 0;
   border-radius: 1rem;
   border: 3px solid red;
-  margin: 15px auto;
 }
 
-.future {
-  margin: 20px auto;
-  border-radius: 1rem;
+.nextdays {
   border: 1px solid #3D76D0;
+  border-radius: 1rem;
   background: hsl(217, 19%, 24%);
-  display: grid;
-  grid-template-rows: repeat(auto-fill, auto);
-  padding: 15px 5px;
-  gap: 10px;
-  height: 200px;
-  overflow: scroll;
+  margin: 20px auto;
+  padding: 5px;
+  max-height: 200px;
   max-width: 550px;
+  overflow: scroll;
 }
 
-.future div {
-  width: 100%;
+.nextdays div {
+  width: 98%;
+  border: 1px solid hsl(193, 38%, 86%);
   border-radius: 2rem;
+  margin: 10px auto;
   background: hsl(218, 23%, 16%);
-  padding: 15px;
+  padding: 10px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.future div img {
+.nextdays div span:nth-child(2) {
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+.nextdays div img {
   width: 25px;
 }
